fix: fix spacing in popup

--- a/pages/catalogue/style.css
+++ b/pages/catalogue/style.css
@@ -77,11 +77,19 @@ aside {
     background-color: #fefefe;
     margin: 10% auto;
     padding: 10px;
-    width: 60%;
+    width: 40%;
+}
+
+.modal-content h3 {
+    text-align: left;
+    font-size: 1rem;
+    margin-bottom: 0.5rem;
+    padding-top: 15px;
+    padding-left: 25px;
 }
 
 .modal-content .description {
-    margin-top: 30px;
+    padding: 0 25px 25px 25px;
 }
 
 .close-btn {
